# CodeRepository

./: .gitignore  .gitmodules  README.md
Egret/Framework/: egretProperties.json  manifest.json
Egret/FrameworkPro1/: egretProperties.json  manifest.json
Unity/Framework/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
Unity/Map/: Assembly-CSharp.csproj  AstarPathfindingProject.csproj  AstarPathfindingProjectEditor.csproj  NavMeshPlus.csproj  NavMeshPlusEditor.csproj  PackageToolsEditor.csproj  SuperTiled2Unity.csproj  SuperTiled2UnityEditor.csproj  UnityTileMap.sln
Unity/Pro1_5.6.5/: Main.cs  Pro1_5.6.5.Editor.csproj  Pro1_5.6.5.csproj  Pro1_5.6.5.sln
Unity/SmallToos/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  (+1 more)
VisualStudio/GameEngineFromScratch/: CMakeLists.txt
VisualStudio/GameEngineFromScratch/Empty/: EmptyApplication.cpp
VisualStudio/GameEngineFromScratch/Framework/Common/: CMakeLists.txt  GraphicsManager.hpp  main.cpp
VisualStudio/GameEngineFromScratch/Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
VisualStudio/GameEngineFromScratch/GameEngineFromScratch/: CMakeLists.txt  GameEngineFromScratch.cpp  GameEngineFromScratch.h
VisualStudio/GameEngineFromScratch/GameEngineFromScratch/Framework/Common/: main.cpp
VisualStudio/GameEngineFromScratch/GameEngineFromScratch/Framework/Interface/: BaseApplication.cpp  BaseApplication.hpp  IApplication.hpp
VisualStudio/GameEngineFromScratch/Platform/Windows/: HelloEngine_D2D.cpp  HelloEngine_D2D.ilk  HelloEngine_D3D.cpp  HelloEngine_D3D.ilk  HelloEngine_WIN.c  copy.pso  copy.vso
(+330 files in other folders)
